--- a/src/app/styles/components/anime-page-modern.scss
+++ b/src/app/styles/components/anime-page-modern.scss
@@ -2204,10 +2204,12 @@
                 right: 0;
                 height: 3px;
                 background: rgba(255, 255, 255, 0.3);
+                z-index: 5;
 
                 .progress-fill {
                     height: 100%;
                     background: var(--primary-color);
+                    box-shadow: 0 0 8px var(--primary-color);
                 }
             }
 
